tests/snapshots/render_snapshots__snapshot_apply_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Apply─────────────────────────────────────────────────────────────────────────┐"
"│Apply here  Apply elsewhere                                                   │"
"│ A Pick      d Donate                                                         │"
"│ a Apply     n Spinout                                                        │"
"│ h Harvest   s Spinoff                                                        │"
"│ m Squash                                                                     │"
"└──────────────────────────────────────────────────────────────────────────────┘"
