tests/snapshots/render_snapshots__snapshot_branch_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"┌Branch────────────────────────────────────────────────────────────────────────┐"
"│Checkout            Create                       Do                           │"
"│ b Branch/revision   n New branch                 m Rename                    │"
"│ l Local branch      S New spin-out               x Delete                    │"
"│ c New branch        W New worktree               X Reset                     │"
"│ s New spin-off      o New PR to default branch                               │"
"│ w New worktree      O New PR to...                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
