tests/snapshots/render_snapshots__snapshot_commit_popup_with_author.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"┌Commit────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -a Stage all modified and deleted files (--all)                              │"
"│ -e Allow empty commit (--allow-empty)                                        │"
"│ -v Show diff of changes to be commited (--verbose)                           │"
"│ -n Disable hooks (--no-verify)                                               │"
"│ -R Claim authorship and reset author date (--reset-author)                   │"
"│ -A Override the author (--author=André Danielsson <andre@example.com>)       │"
"│ -S Sign using gpg (--gpg-sign)                                               │"
"│ -C Reuse commit message (--reuse-message=)                                   │"
"│                                                                              │"
"│Create     Edit HEAD  Edit                                                    │"
"│ c Commit   e Extend   f Fixup                                                │"
"│                       s Squash                                               │"
"│            a Amend    A Alter                                                │"
"│                       n Augment                                              │"
"│            w Reword   W Revise                                               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
