tests/snapshots/render_snapshots__snapshot_confirm_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                   ┌Confirm──────────────────────────────┐                    │"
"│                   │Delete branch feature/auth?          │                    │"
"│                   │                                     │                    │"
"│                   │y/Enter to confirm, n/Esc to cancel  │                    │"
"│                   └─────────────────────────────────────┘                    │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
