tests/snapshots/render_snapshots__snapshot_fetch_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"┌Fetch─────────────────────────────────────────────────────────────────────────┐"
"│Arguments                                                                     │"
"│ -p Prune deleted branches (--prune)                                          │"
"│ -t Fetch all tags (--tags)                                                   │"
"│ -F Force (--force)                                                           │"
"│                                                                              │"
"│Fetch from                                                                    │"
"│ p ${push-remote}, setting it                                                 │"
"│ u origin/main                                                                │"
"│ e Elsewhere                                                                  │"
"│ a All remotes                                                                │"
"│                                                                              │"
"│Fetch                                                                         │"
"│ o Another branch                                                             │"
"│ r Explicit refspec                                                           │"
"│ m Submodules                                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
