tests/snapshots/render_snapshots__snapshot_help_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"┌Help──────────────────────────────────────────────────────────────────────────┐"
"│Commands                    Appl        General                               │"
"│ A Apply    r Rebase         a A         q         quit                       │"
"│ b Branch   O Reset          s S         Ctrl+r/gr Refresh                    │"
"│ c Commit   _ Revert         S S         ?/h       show this help             │"
"│ f Fetch    z Stash          u U         j/Down    move down                  │"
"│ l Log      t Tag            U U         k/Up      move up                    │"
"│ m Merge    w Worktr         x D         Ctrl+d    half page down             │"
"│ F Pull                                  Ctrl+u    half page up               │"
"│ p Push                                  gg        go to first line           │"
"│                                         G         go to last line            │"
"│                                         Ctrl+e    scroll one line down       │"
"│                                         Ctrl+y    scroll one line up         │"
"│                                         Tab       toggle section collapsed/ex│"
"│                                         V         enter visual selection mode│"
"│                                                                              │"
"│Magi version [version]                                                           │"
"└──────────────────────────────────────────────────────────────────────────────┘"
