tests/snapshots/render_snapshots__snapshot_input_popup.snap
---
source: tests/render_snapshots.rs
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│         ┌Name for new branch───────────────────────────────────────┐         │"
"│         │ feature/new-thing_                                       │         │"
"│         │                                                          │         │"
"│         │ Enter to confirm, Esc to cancel                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
