tests/snapshots/render_snapshots__snapshot_input_popup_mid_text_cursor.snap
---
source: tests/render_snapshots.rs
assertion_line: 383
expression: "render_to_string(&model, 80, 24)"
---
"┌Magi───────────────────────────────────────────────────────────────/repo/magi/┐"
"│∨Head:    main [hash] Initial commit                                         │"
"│                                                                              │"
"│∨Recent commits                                                               │"
"│ [hash] main Initial commit                                                  │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│         ┌Name for new branch───────────────────────────────────────┐         │"
"│         │ feature/new-thing                                        │         │"
"│         │                                                          │         │"
"│         │ Enter to confirm, Esc to cancel                          │         │"
"│         └──────────────────────────────────────────────────────────┘         │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└ NORMAL ──────────────────────────────────────────────────────────────────────┘"
